--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
         </activity>
         <activity android:name=".LogInActivity">
             <intent-filter>
@@ -23,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignInActivity">
+        </activity>
+        <activity android:name=".ProfileActivity">
         </activity>
     </application>
 
